@@ -3,7 +3,9 @@ include $(top_srcdir)/Makefile.config
 
 lib_LTLIBRARIES = libcommon.la
 
-libcommon_la_SOURCES = DocumentDB.cc DocumentRef.cc HtWordReference.cc HtWordList.cc defaults.cc 
+libcommon_la_SOURCES = DocumentDB.cc DocumentRef.cc \
+	HtWordReference.cc HtWordList.cc defaults.cc \
+	HtURLCodec.cc URL.cc URLTrans.cc
 
 libcommon_la_LDFLAGS = -release $(HTDIG_MAJOR_VERSION).$(HTDIG_MINOR_VERSION).$(HTDIG_MICRO_VERSION)
 
@@ -11,6 +13,8 @@ noinst_HEADERS = DocumentDB.h \
 	DocumentRef.h \
 	HtWordReference.h \
 	HtWordList.h \
+	HtURLCodec.h \
+	URL.h \
 	defaults.h
 
 LOCAL_DEFINES=	-DBIN_DIR=\"$(bindir)\" \
