@@ -11,7 +11,7 @@
 // or the GNU Public License version 2 or later 
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: URL.cc,v 1.33 1999/09/24 16:47:10 loic Exp $
+// $Id: URL.cc,v 1.1 1999/10/06 09:35:21 loic Exp $
 //
 
 #include "URL.h"
