@@ -11,7 +11,7 @@
 // or the GNU Public License version 2 or later 
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: URL.h,v 1.8 1999/09/24 10:29:03 loic Exp $
+// $Id: URL.h,v 1.1 1999/10/06 09:35:21 loic Exp $
 //
 
 #ifndef _URL_h_
